--- a/Statement.html
+++ b/Statement.html
@@ -25,7 +25,7 @@ Imperfection means variation and variability. I find that the slightest fluctuat
 <br><br>
 Therefore, as an artist I strive to deviate away from manufactured perfection. I allow for abnormalities and subtle imperfections in the composition of my pieces, while still aspiring to create graceful, delicate, aesthetically pleasing designs.</p>
 
-    <a href="index4.html" id="return">SimplyCeramic</a>
+    <a href="index.html" id="return">SimplyCeramic</a>
       </div>
     </div>
   </div>
