--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           Download Resume</a>
         </button>
         <br>
-        <a href="index4.html" id="return">SimplyCeramic</a>
+        <a href="index.html" id="return">SimplyCeramic</a>
       </div>
     </div>
   </div>
