--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     }
     </style>
   </head>
-<a id="return2" href="index4.html">SimplyCeramic</a>
+<a id="return2" href="index.html">SimplyCeramic</a>
 <title>Portfolio</title>
 <h1 class="portfoliotitle">Portfolio</h1>
 <body>
