--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
           <br><br>
         In a recent gallery show, Goldilocks Complex, 100 unique mugs were crafted to stimulate a conversation about individualism and everyone’s idea of what’s “just right.” In another exhibition, The Stuff of Fairytales, Mariana exemplifies her observations of human nature through the installation of a bronze dandelion. The lighter-than-air dandelion carries our fantastic wishes. A wish is a fantasy and a hope. Mariana’s fascination with imperfect behavior, infinite variation, and unpredictability remains a constant thread from which she suspends her pieces. These suspended infinite and variable wishes are an emanation and resonate from her work.
         </p>
-        <button class="button"><a href="Squatrito_Mariana_Resume.pdf">
-          Download Resume</a>
-        </button>
+        <a href="Squatrito_Mariana_Resume.pdf"><button class="button" id="resume">
+          Download Resume
+        </button></a>
         <br>
         <a href="index.html" id="return">SimplyCeramic</a>
       </div>
