--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>WonderWorld</title>
+<title>WonderWhirl</title>
 <style>
   iframe {
     width:100%;
@@ -21,8 +21,9 @@
 
 
 <br><br>
+<h1>Portrait Sketch</h1>
+<p>Move and Click to add color!</p>
 
 <iframe src="https://editor.p5js.org/marianacsquatrito/embed/egwG06I4d"></iframe>
-
 </body>
 </html>
