--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="about.html"> About</a></li>
       <li><a href="statement.html">Statement</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="media.html">MediaArt</a></li>
       <li><a href="https://www.instagram.com/simplyceramic/" class="fab fa-instagram"><a></i></li>
     </ul>
 
